fixed bug with cursor pointer not showing

--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ a:visited {
 	text-transform: uppercase;
 	font-size: 3rem;
 	letter-spacing: 0.05rem;
-	padding: 3rem;
+	padding: 4rem;
 	color: rgb(41, 208, 238);
 	letter-spacing: 00.25rem;
 }
@@ -383,7 +383,7 @@ hero section
 
 .hero__btn--secondary {
 	margin-left: 2rem;
-	cursor: pointer;
+	/* cursor: pointer; */
 }
 
 .hero__btn--primary {
@@ -392,7 +392,7 @@ hero section
 	font-weight: bold;
 	margin-left: 0.35rem;
 	/* position: relative; */
-	cursor: pointer;
+	/* cursor: pointer; */
 }
 
 /* .hero__btn--primary::before {
@@ -424,7 +424,6 @@ hero section
 	font-size: 3rem;
 	margin-bottom: rem;
 	color: rgb(41, 208, 238);
-
 	margin: 0;
 }
 
@@ -438,7 +437,7 @@ projects section
 .projects {
 	min-height: 100vh;
 	width: 100%;
-
+	padding-bottom: 3rem;
 	display: grid;
 	place-items: center;
 }
